--- a/full.css
+++ b/full.css
@@ -58,7 +58,7 @@ Author URI:
     .logo
 	{
 	   height: 90%;
-	   background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/e/e2/Glaciar_icon.svg/128px-Glaciar_icon.svg.png');
+	   background-image: url('https://lh6.googleusercontent.com/u6ewgvfpSTH9TEZEoeQt4rI7zpmmqK_DKoso-GwseIURdGCUXExbNC1EI3R7-3UacKosFyzsI2JE9Q=w1280-h869');
    	   background-position: center;
     	   background-repeat: no-repeat;
 	}
