--- a/small.css
+++ b/small.css
@@ -173,3 +173,30 @@ Author URI:
    	  padding: 14px 16px;
    	  text-decoration: none;
 	}
+
+  .content table
+	{
+	  margin: auto; 
+  	  color: white;
+	  border: none;
+	}
+
+  .content td
+        {
+	font-size: 10px;
+  	font-family: "Trebuchet MS";
+  	text-align: center;
+	padding-left: 10px;
+	padding-right: 10px;	
+	}
+
+  .content table a
+	{
+	color: white;
+	text-decoration: none;
+	}
+
+ .content table a:hover
+	{
+	color: black;
+	}
