--- a/full.css
+++ b/full.css
@@ -58,7 +58,7 @@ Author URI:
     .logo
 	{
 	   height: 90%;
-	   background-image: url('https://lh5.googleusercontent.com/Djz2H0sm6TGIqfW6vKG3_XMNoNBc914thwuw319kuZB0NwiQYOYYq8n70Ldp3E2-GghMNwxk7fAdZeWH7Zj9=w1280-h969');
+	   background-image: url('https://image.ibb.co/dTLKLH/WGTV.png');
    	   background-position: center;
     	   background-repeat: no-repeat;
 	}
