--- a/small.css
+++ b/small.css
@@ -58,7 +58,7 @@ Author URI:
     .logo
 	{
 	   height: 90%;
-	   background-image: url('https://image.ibb.co/dTLKLH/WGTV.png');
+	   background-image: url('https://image.ibb.co/k4VEnx/bateswood_Logo.png');
    	   background-position: center;
     	   background-repeat: no-repeat;
 	}
