--- a/small.css
+++ b/small.css
@@ -200,3 +200,126 @@ Author URI:
 	{
 	color: black;
 	}
+
+
+
+.cards 
+	{
+	height: 60%;
+	width: 375px;
+	margin-left: auto; 
+   	margin-right:auto;
+	background-color: rgba(20,20,20,.80);
+   display: block;
+   overflow: auto; 
+	}
+
+   .cards h1
+	{
+	  text-align: center;
+	  color: white;
+	}
+
+
+
+
+  .upcomingTable 
+	{
+   display: block;
+   overflow: auto;
+   height: 150px;
+	}
+
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #f1f1f1; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #888; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555; 
+}
+
+.button {
+    background-color: rgba(66, 244, 152,.20);
+    border: none;
+    color: white;
+    padding: 2px 4px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    margin: 4px 2px;
+    cursor: pointer;
+    border: 1px solid rgba(66, 244, 152,.90);
+}
+
+.button:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    background-color: rgba(66, 244, 152, .99);
+}
+
+
+
+
+
+
+
+   .cardTableDiv th
+	{
+	  font-size: 40px;
+  	  font-family: "Trebuchet MS";
+  	  text-align: center;
+	  background-image: url('https://yarn-cdn-weblinc.netdna-ssl.com/media/W1siZiIsIjIwMTYvMDgvMjMvMTIvMjMvMjQvODg0L25ld3lhcm5ncmlkLmpwZyJdLFsicCIsIm9wdGltIl1d/newyarngrid.jpg?sha=d16ab4a3545ad385'); 
+	  padding-left: 5px;
+	  padding-right: 5px;
+	  height: 60px;
+
+	}
+
+   .cardTable
+	{	
+	background-color: rgba(255, 204, 102, .90);
+	}
+
+
+    .cardTableDiv td
+	{
+	  font-size: 15px;
+  	  font-family: "Trebuchet MS";
+  	  text-align: center;
+	  height: 60px;
+ 
+	}   
+
+    .cardFooter td
+	{
+	  font-size: 15px;
+  	  font-family: "Trebuchet MS";
+  	  text-align: center;
+	  height: 20px;	  
+	} 
+
+
+    .footerDivider
+	{
+	border-right: 1px solid white;
+	} 
+
+  .cardTableSpacer
+	{
+         height: 10px;
+	}
+
+
+
+
