--- a/full.css
+++ b/full.css
@@ -214,9 +214,14 @@ Author URI:
    overflow: auto; 
 	}
 
-   .cards h1
+   .cards p
 	{
 	  text-align: center;
+	  color: #f1f1f1;
+	}
+
+   .cards h1
+	{
 	  color: #f1f1f1;
 	}
 
