--- a/full.css
+++ b/full.css
@@ -217,12 +217,12 @@ Author URI:
    .cards p
 	{
 	  text-align: center;
-	  color: #f1f1f1;
+	  color: white;
 	}
 
    .cards h1
 	{
-	  color: #f1f1f1;
+	  color: white;
 	}
 
 
