--- a/full.css
+++ b/full.css
@@ -212,7 +212,7 @@ Author URI:
 	//background-color: rgba(120,120,120,.80);
    display: block;
    overflow: auto; 
-	color: white;
+	color: red;
 	}
 
    .cards p
