--- a/full.css
+++ b/full.css
@@ -218,7 +218,7 @@ Author URI:
    .cards p
 	{
 	  text-align: center;
-	  color: white;
+	  color: red;
 	  font-size: 40px;
   	  font-family: "Trebuchet MS";
 	}
