--- a/full.css
+++ b/full.css
@@ -214,14 +214,13 @@ Author URI:
    overflow: auto; 
 	}
 
- /*  .cards p
+   .cards p
 	{
 	  text-align: center;
-	  color: red;
+	  color: white;
 	  font-size: 40px;
   	  font-family: "Trebuchet MS";
 	}
-*/
 
 	
   .upcomingTable 
