--- a/small.css
+++ b/small.css
@@ -255,6 +255,8 @@ Author URI:
   	  font-family: "Trebuchet MS";
   	  text-align: center;
 	  background-image: url('https://yarn-cdn-weblinc.netdna-ssl.com/media/W1siZiIsIjIwMTYvMDgvMjMvMTIvMjMvMjQvODg0L25ld3lhcm5ncmlkLmpwZyJdLFsicCIsIm9wdGltIl1d/newyarngrid.jpg?sha=d16ab4a3545ad385'); 
+	  background-position: center;
+    	  background-size: cover;
 	  padding-left: 5px;
 	  padding-right: 5px;
 	  height: 60px;
