--- a/full.css
+++ b/full.css
@@ -221,6 +221,9 @@ Author URI:
 	  color: white;
 	  font-size: 40px;
   	  font-family: "Trebuchet MS";
+	  position: fixed;
+          width: 100%;
+          top: 5px;
 	}
 
 	
