--- a/full.css
+++ b/full.css
@@ -337,9 +337,9 @@ Author URI:
         overflow: auto;
 	text-align: center; 
         float: right;
-	//margin-left: 50%; 
+	margin-left: 50%; 
    	//margin-right:auto;
-	margin: auto;
+	//margin: auto;
 }
 
 
