--- a/full.css
+++ b/full.css
@@ -337,7 +337,7 @@ Author URI:
         overflow: auto;
 	text-align: center; 
         float: right;
-	margin-left: 50%; 
+	//margin-left: 50%; 
    	//margin-right:auto;
 	//margin: auto;
 }
