--- a/full.css
+++ b/full.css
@@ -337,7 +337,7 @@ Author URI:
         display: block;
         overflow: auto;
 	text-align: center; 
-        float: center;
+        float: right;
 	//margin-left: 50%; 
    	//margin-right:auto;
 	//margin: auto;
