--- a/full.css
+++ b/full.css
@@ -351,7 +351,7 @@ p.fuCards
 	weight:300px;
 	overflow:auto;
 	text-align:center;
-	float:right;
+	float:left;
 	border-style: solid;
         border-width: 5px;
 	}	
