--- a/full.css
+++ b/full.css
@@ -344,17 +344,18 @@ Author URI:
 	color: white;
 	}
 
-.fuCards
+.fuContent
 	{
-	color:rgb(255,255,255);
-	height:300px;
-	weight:300px;
-	margin: 0;
-	text-align:center;
-	float:left;
-	border-style: solid;
-        border-width: 5px;
+	height: 60%;
+	width: 500px;
+	background-color: rgba(52,207,130, .85);
+	border:1px solid white;
 	}	
+
+.fuContent
+	{
+	color:white;
+	}
 
 
 
